--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <div class="logo-container">
-            <img src="YCH logo CMYK crop.png" alt="YCH Logo">
+            <img src="https://github.com/Asher-ponte/Safety-Analysis-Report/blob/main/YCH%20logo%20CMYK%20crop.png" alt="YCH Logo">
         </div>
         <h1>Safety Incident Analysis Dashboard</h1>
         <p class="text-center text-gray-600 mb-8"> YCH Analysis of incidents based on Incident from (January - April 2025)</p>
